--- a/src/Auction.Eventing/Eventing.csproj
+++ b/src/Auction.Eventing/Eventing.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Auction.Domain\Auction.Domain.csproj" />
+    <ProjectReference Include="..\Auction.Domain\Domain.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
