--- a/tests/Auction.IntegrationTests/IntegrationTests.csproj
+++ b/tests/Auction.IntegrationTests/IntegrationTests.csproj
@@ -21,9 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Auction.Domain\Auction.Domain.csproj" />
-    <ProjectReference Include="..\..\src\Auction.Infrastructure\Auction.Infrastructure.csproj" />
-    <ProjectReference Include="..\..\src\Auction.Services\Auction.Services.csproj" />
+    <ProjectReference Include="..\..\src\Auction.Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\src\Auction.Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\Auction.Services\Services.csproj" />
+    <ProjectReference Include="..\..\src\Auction.Sync\Sync.csproj" />
   </ItemGroup>
 
 </Project>
