--- a/tests/Auction.SimulationTests/SimulationTests.csproj
+++ b/tests/Auction.SimulationTests/SimulationTests.csproj
@@ -21,10 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Auction.Domain\Auction.Domain.csproj" />
-    <ProjectReference Include="..\..\src\Auction.Services\Auction.Services.csproj" />
-    <ProjectReference Include="..\..\src\Auction.Eventing\Auction.Eventing.csproj" />
-    <ProjectReference Include="..\..\src\Auction.Sync\Auction.Sync.csproj" />
+    <ProjectReference Include="..\..\src\Auction.Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\src\Auction.Services\Services.csproj" />
+    <ProjectReference Include="..\..\src\Auction.Eventing\Eventing.csproj" />
+    <ProjectReference Include="..\..\src\Auction.Sync\Sync.csproj" />
   </ItemGroup>
 
 </Project>
